--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,10 @@ tokio ={version = "1", features=["full"]}
 reqwest = {version = "0.12", features = ["json"]}
 axum = "0.8.8"
 
+dotenv = "0.15.0"
+utoipa = { version = "5.4.0", features = ["axum_extras"] }
+utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
+uuid = { version = "1.20.0", features = ["v4"] }
+serde = { version = "1.0.228", features = ["derive"] }
+sqlx = {version = "0.8.6", features= ["postgres", "runtime-tokio"]}
+
